@@ -1,17 +1,0 @@
-{% extends "sentry/bases/modal.html" %}
-
-{% load i18n %}
-{% block global_sidebar %}{% endblock %}
-{% block sub-header %}{% endblock %}
-
-{% block title %}{% trans "New Team" %} | {{ block.super }}{% endblock %}
-
-{% block main %}
-<div class="create-flow">
-  <h2 class="m-b-1">{% trans "Create a New Team" %}</h2>
-
-  <p>{% blocktrans %}Teams group members' access to a specific focus, e.g. a major product or application that may have sub-projects.{% endblocktrans %}</p>
-
-  {% include "sentry/partial/_form.html" %}
-</div>
-{% endblock %}
