@@ -1,0 +1,32 @@
+// Jest Snapshot v1, https://goo.gl/fbAQLP
+
+exports[`TeamCreate render() renders correctly 1`] = `
+<NarryLayout>
+  <h3>
+    Create a New Team
+  </h3>
+  <p>
+    Teams group members' access to a specific focus, e.g. a major product or application that may have sub-projects.
+  </p>
+  <ApiForm
+    apiEndpoint="/organizations/org/teams/"
+    apiMethod="POST"
+    className="form-stacked"
+    fields={
+      Array [
+        Object {
+          "component": [Function],
+          "label": "Team Name",
+          "name": "name",
+          "placeholder": "e.g. Operations, Web, Desktop",
+          "required": true,
+        },
+      ]
+    }
+    footerClass="form-actions align-right"
+    onSubmitSuccess={[Function]}
+    submitDisabled={false}
+    submitLabel="Save Changes"
+  />
+</NarryLayout>
+`;
